# yew-template-for-github-io

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index-63589281cd7d6a07.js  index-63589281cd7d6a07_bg.wasm  index-659f6aa21ff0956a.js  index-6ac77671386cb8bb.js  index-6ac77671386cb8bb_bg.wasm  index-821a5b89c4fd6e55.js  index-821a5b89c4fd6e55_bg.wasm  index-b7c5e3a3c2de9568.js  index-b887df173a0b2513.js  index-b887df173a0b2513_bg.wasm  index-eac49c40d4efeb64.js  index-eac49c40d4efeb64_bg.wasm  index.html  index_base.html  main-faba2416193ef083.css  package.json  tailwind.config.js  webpack.config.js
.github/workflows/: publish_gh_pages.yml
css/: index.scss
frontend/: Cargo.toml  README.md  Trunk.toml  deploy.sh  index.html
frontend/style/: README.md  package.json  webpack.config.js
public/: index-14b268017422958e.js  index-14b268017422958e_bg.wasm  index-2d7edf546987fa37.js  index-2d7edf546987fa37_bg.wasm  index-6781e5c9d28a4f23.js  index-6781e5c9d28a4f23_bg.wasm  index-e0f6aef227033691.js  index-e0f6aef227033691_bg.wasm  index-f2f22d804d7a0e68.js  index-f2f22d804d7a0e68_bg.wasm  main-5af010ab8d009575.css  main-a2e9804e19b8eab9.css  main-fe645a1dfac56aa7.css  tailwind-4c998bb29825dd69.css  tailwind-b6199c5633ae30d.css
src/: main.rs
static/: 404.html
style/: README.md  package.json  tailwind.config.js  webpack.config.js
