[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
serde = "1.0.117"
reqwasm = "0.4.1"
gloo = "0.6.0"
yew-router = "0.16.0"

[dependencies.web-sys]
version = "0.3.56"
features = [
    "HtmlInputElement",
]
